[package]
name = "rust-python-jaeger-reporter"
version = "0.1.19"
authors = ["Erik Johnston <erik@matrix.org>"]
edition = "2018"
description = "A faster reporter for the python `jaeger-client` that reports spans in a native background thread."
repository = "https://github.com/erikjohnston/rust-jaeger-python-client"
readme = "README.md"

[lib]
name = "rust_python_jaeger_reporter"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-python = ">=3.6"
project-url = {Source = "https://github.com/erikjohnston/rust-jaeger-python-client"}
classifier = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
]

[dependencies]
ordered-float = "2.2.0"
thrift = "0.13.0"
try_from = "0.3.2"
crossbeam-channel = "0.5.1"
itertools = "0.10.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

# There's a memory leak in v0.13.2 when using u128's
[patch.crates-io]
pyo3 = { git = 'https://github.com/erikjohnston/pyo3' }

[profile.release]
debug = true
